# messing-with-sasquatch

./: Cargo.toml  README.md
inefficient-prover/: Cargo.toml  README.md  spec.md
inefficient-prover/src/: lib.rs  main.rs  prover.rs
inefficient-prover/tests/: integration_tests.rs
modulo-machine/: Cargo.toml  README.md  spec.md
modulo-machine/src/: lib.rs  main.rs
